--- a/tests/Jupyter_notebook_test.ipynb
+++ b/tests/Jupyter_notebook_test.ipynb
@@ -32,16 +32,16 @@
     "business_id: str = getenv('BUSINESS_ID')\n",
     "environment: str = getenv('ENVIRONMENT')\n",
     "access_token: str = getenv('API_TOKEN')\n",
-    "\n",
+    "    \n",
     "initial_time = time.time()\n",
     "s = Shimoku.Client(\n",
     "    access_token=access_token,\n",
     "    universe_id=universe_id,\n",
     "    environment=environment,\n",
-    "    business_id=business_id,\n",
     "    verbosity='INFO',\n",
     "    async_execution=True,\n",
-    ")"
+    ")\n",
+    "s.set_business(uuid=business_id)"
    ]
   },
   {
@@ -63,6 +63,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0df71e0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s.configure_logging('INFO')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "3a5b1644",
    "metadata": {},
@@ -77,7 +87,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s.plt.clear_business()"
+    "app_ids = s.business.get_business_app_ids(uuid=business_id)\n",
+    "for app_id in app_ids:\n",
+    "    print('this', app_ids)\n",
+    "    s.app.delete_all_app_activities(uuid=app_id)\n",
+    "        \n",
+    "s.business.delete_all_business_apps(uuid=business_id)\n",
+    "s.business.delete_all_business_dashboards(uuid=business_id)"
    ]
   },
   {
@@ -95,51 +111,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "menu_path: str = 'test-indicators/indicator-test'\n",
+    "s.set_menu_path('test-jp/indicator-test')\n",
     "data_ = [\n",
     "    {\n",
-    "        \"footer\": \"\",\n",
-    "        \"header\": \"Estado\",\n",
-    "        \"val\": \"Abierto\",\n",
-    "        \"alignment\": \"center\",\n",
+    "        \"description\": \"\",\n",
+    "        \"title\": \"Estado\",\n",
+    "        \"value\": \"Abierto\",\n",
+    "        \"align\": \"center\",\n",
     "    },\n",
     "    {\n",
-    "        \"footer\": \"\",\n",
-    "        \"header\": \"Price ($)\",\n",
-    "        \"val\": \"455\",\n",
-    "        \"col\": \"success\",\n",
+    "        \"description\": \"\",\n",
+    "        \"title\": \"Price ($)\",\n",
+    "        \"value\": \"455\",\n",
+    "        \"color\": \"success\",\n",
     "    },\n",
     "    {\n",
-    "        \"footer\": \"this is a description\",\n",
-    "        \"header\": \"Volumen\",\n",
-    "        \"val\": \"41153\"\n",
+    "        \"description\": \"this is a description\",\n",
+    "        \"title\": \"Volumen\",\n",
+    "        \"value\": \"41153\"\n",
     "    },\n",
     "    {\n",
-    "        \"footer\": \"\",\n",
-    "        \"header\": \"Cambio €/$\",\n",
-    "        \"val\": \"1.1946\",\n",
+    "        \"description\": \"\",\n",
+    "        \"title\": \"Cambio €/$\",\n",
+    "        \"value\": \"1.1946\",\n",
     "    },\n",
     "]\n",
-    "order = s.plt.indicator(\n",
-    "    data=data_,\n",
-    "    menu_path=menu_path,\n",
-    "    order=0,\n",
-    "    value='val',\n",
-    "    header='header',\n",
-    "    footer='footer',\n",
-    "    align='alignment',\n",
-    "    color='col'\n",
-    ")\n",
-    "order = s.plt.indicator(\n",
-    "    data=data_ + data_[2:],\n",
-    "    menu_path=menu_path,\n",
-    "    order=order,\n",
-    "    value='val',\n",
-    "    header='header',\n",
-    "    footer='footer',\n",
-    "    align='alignment',\n",
-    "    color='col'\n",
-    ")"
+    "order = s.plt.indicator(data=data_, order=0)\n",
+    "order = s.plt.indicator(data=data_ + data_[2:], order=order)"
    ]
   },
   {
@@ -147,7 +145,7 @@
    "id": "17f89c3e",
    "metadata": {},
    "source": [
-    "# Multifilter bars"
+    "# Bars"
    ]
   },
   {
@@ -157,57 +155,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_ = pd.read_csv('../data/test_multifilter.csv')\n",
-    "menu_path = 'test/multifilter-test'\n",
-    "y: List[str] = [\n",
-    "    'Acné', 'Adeslas', 'Asisa',\n",
-    "    'Aspy', 'Caser', 'Clínica Navarra', 'Cualtis', 'Cáncer', 'DKV',\n",
-    "    'Depresión', 'Dermatólogo', 'Dermatólogo Adeslas', 'Diabetes',\n",
-    "    'Fundación Jiménez Díaz', 'Ginecólogo', 'Ginecólogo Adeslas',\n",
-    "    'HM Hospitales', 'Hemorroides', 'IMQ', 'Preving', 'Psicólogo',\n",
-    "    'Psiquiatra', 'Quirón', 'Quirón Prevención + quirónprevención',\n",
-    "    'Quirón+Quirónsalud', 'Quirónsalud', 'Ruber', 'Ruber Internacional',\n",
-    "    'Ruber Juan Bravo', 'Sanitas', 'Teknon', 'Traumatólogo', 'Vithas'\n",
-    "]\n",
-    "\n",
-    "data_1 = data_[data_['seccion'].isin(['Empresas hospitalarias', 'Empresas PRL'])]\n",
-    "\n",
-    "filters: Dict = {\n",
-    "    'order': 0,\n",
-    "    'filter_cols': [\n",
-    "        'seccion', 'frecuencia', 'region',\n",
-    "    ],\n",
-    "}\n",
+    "s.set_menu_path('test-jp/bar-test')\n",
+    "data_ = [{'date': dt.date(2021, 1, 1), 'x': 50000000, 'y': 5},\n",
+    "         {'date': dt.date(2021, 1, 2), 'x': 60000000, 'y': 5},\n",
+    "         {'date': dt.date(2021, 1, 3), 'x': 40000000, 'y': 5},\n",
+    "         {'date': dt.date(2021, 1, 4), 'x': 70000000, 'y': 5},\n",
+    "         {'date': dt.date(2021, 1, 5), 'x': 30000000, 'y': 5}]\n",
     "s.plt.bar(\n",
-    "    data=data_1,\n",
-    "    x='fecha', y=y,\n",
-    "    menu_path=f'{menu_path}-bysize',\n",
-    "    order=1, rows_size=2,\n",
+    "    data=data_, x='date', y=['x', 'y'],\n",
+    "    x_axis_name='Date', y_axis_name='Revenue',\n",
+    "    order=0, rows_size=2,\n",
     "    cols_size=12,\n",
-    "    filters=filters,\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bf639f16",
-   "metadata": {},
-   "source": [
-    "# Get apps and reports"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fb0c209f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for report in s.business.get_business_reports(business_id):\n",
-    "    print(report)\n",
-    "\n",
-    "for app in s.business.get_business_apps(business_id):\n",
-    "    print(app)"
    ]
   },
   {
@@ -229,6 +188,29 @@
    "source": [
     "s.run()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf639f16",
+   "metadata": {},
+   "source": [
+    "# Get apps and reports"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb0c209f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s.configure_logging('WARNING')\n",
+    "for app in s.business.get_business_apps(uuid=business_id):\n",
+    "    print('App', app['name'])\n",
+    "    for report in s.app.get_app_reports(uuid=app['id']):\n",
+    "        print('Report', report['properties']['hash'])\n",
+    "s.configure_logging('INFO')"
+   ]
   }
  ],
  "metadata": {
@@ -247,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
